# zigbee-gateway-esp32c6-v2

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  SMOKE_TEST.md  idfw  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.selftest
components/: README.md
components/gateway_app/: CMakeLists.txt
components/gateway_app/include/: esp_zigbee_gateway.h  gateway_app.h  gateway_app_runtime.h  gateway_zigbee_runtime.h
components/gateway_app/src/: gateway_app.c  gateway_app_bootstrap.c  gateway_app_runtime.c  gateway_zigbee_runtime.c  gateway_zigbee_runtime_bootstrap.c  gateway_zigbee_runtime_commands.c  gateway_zigbee_runtime_internal.h  gateway_zigbee_runtime_signals.c
components/gateway_core/: CMakeLists.txt  gateway_core_placeholder.c
components/gateway_core/include/: config_service.h  device_manager.h  device_service.h  device_service_lock_port.h  device_service_repo_port.h  device_service_rules.h  gateway_core_component.h  gateway_events.h  gateway_runtime_context.h  gateway_state.h  gateway_types.h  job_queue.h  rcp_tool.h  settings_manager.h  system_service.h  wifi_service.h  zigbee_service.h
components/gateway_core/src/: config_service.c  device_manager.c  device_service.c  device_service_events.c  device_service_internal.h  device_service_lock_freertos.c  device_service_persistence.c  device_service_rules.c  gateway_state.c  job_queue.c  system_service.c  wifi_service.c  zigbee_service.c
components/gateway_core/test/: gateway_core_self_tests.c
components/gateway_core_facade/: CMakeLists.txt
components/gateway_core_facade/include/: gateway_core_facade.h  gateway_device_zigbee_facade.h  gateway_jobs_facade.h  gateway_wifi_system_facade.h
components/gateway_core_facade/src/: gateway_core_facade.c  gateway_device_zigbee_facade.c  gateway_jobs_facade.c  gateway_wifi_system_facade.c
components/gateway_core_jobs/: CMakeLists.txt
components/gateway_core_jobs/include/: job_queue.h
components/gateway_core_jobs/src/: job_queue.c  job_queue_internal.h  job_queue_json.c  job_queue_json.h  job_queue_policy.c  job_queue_policy.h  job_queue_state.c  job_queue_state.h  job_queue_submit.c  job_queue_worker.c
components/gateway_core_state/: CMakeLists.txt
components/gateway_core_state/include/: state_store.h
components/gateway_core_state/src/: gateway_state.c  gateway_state_lock.c  gateway_state_lock.h  gateway_state_lock_freertos.c  gateway_state_lock_noop.c
components/gateway_core_storage/: CMakeLists.txt
components/gateway_core_storage/include/: config_repository.h  device_repository.h  state_store.h  storage_kv.h  storage_partitions.h  storage_schema.h  storage_settings.h
components/gateway_core_storage/src/: config_repository_nvs.c  device_manager.c  device_repository_nvs.c  gateway_state.c  settings_manager.c  storage_kv_nvs.c  storage_partitions_nvs.c  storage_schema_nvs.c
components/gateway_core_storage/test/: gateway_core_storage_self_tests.c
components/gateway_net/: CMakeLists.txt  gateway_net_placeholder.c
components/gateway_net/include/: gateway_net_component.h  hostname_settings.h  net_platform_services.h  wifi_ap_fallback.h  wifi_context.h  wifi_credentials.h  wifi_credentials.h.example  wifi_init.h  wifi_settings.h  wifi_settings.h.example
components/gateway_net/src/: net_platform_services.c  wifi_ap_fallback.c  wifi_init.c  wifi_sta.c
components/gateway_web/: CMakeLists.txt  gateway_web_placeholder.c
components/gateway_web/include/: api_handlers.h  api_usecases.h  error_ring.h  gateway_web_component.h  http_routes.h  lqi_json_mapper.h  web_server.h  ws_manager.h
components/gateway_web/src/: api_handlers.c  api_usecases.c  error_ring.c  http_error.c  http_routes.c  http_static.c  lqi_json_mapper.c  mdns_service.c  web_server.c  ws_manager.c
components/gateway_web/test/: gateway_web_self_tests.c
components/gateway_web_api/: CMakeLists.txt
components/gateway_web_api/include/: api_handlers.h  api_usecases.h  error_ring.h  health_json_builder.h  http_error.h  lqi_json_mapper.h  status_json_builder.h
components/gateway_web_api/src/: api_contracts.c  api_handlers.c  api_health_handlers.c  api_jobs_handlers.c  api_status_handlers.c  api_usecases.c  api_usecases_internal.h  api_usecases_system.c  api_usecases_zigbee.c  error_ring.c  health_json_builder.c  http_error.c  lqi_json_mapper.c  status_json_builder.c
components/gateway_web_ws/: CMakeLists.txt
components/gateway_web_ws/include/: ws_manager.h
components/gateway_web_ws/src/: ws_manager.c  ws_manager_internal.h  ws_manager_json.c  ws_manager_json.h  ws_manager_policy.c  ws_manager_state.c  ws_manager_state.h  ws_manager_transport.c  ws_manager_transport.h
main/: CMakeLists.txt  Kconfig.projbuild  api_handlers.c  device_manager.c  device_manager.h  esp_zigbee_gateway.c  esp_zigbee_gateway.h  http_routes.c  http_routes.h  http_static.c  http_static.h  idf_component.yml  main.c  mdns_service.h  rcp_tool.c  web_server.c  web_server.h  wifi_ap_fallback.c  wifi_credentials.h.example  wifi_init.c  wifi_init.h  wifi_sta.c  wifi_sta.h  ws_manager.c  ws_manager.h
main/core/: device_manager.c  device_manager.h  esp_zigbee_gateway.c  gateway_events.c  gateway_events.h  gateway_state.c  gateway_state.h  job_queue.h  rcp_tool.c  rcp_tool.h  self_tests.c  self_tests.h  self_tests_app_main.c  settings_manager.c  settings_manager.h  system_service.c  system_service.h  wifi_service.c  wifi_service.h  zgw_service.c  zgw_service.h  zigbee_service.c  zigbee_service.h
main/net/: wifi_ap_fallback.c  wifi_context.h  wifi_credentials.h  wifi_init.c  wifi_init.h  wifi_settings.h  wifi_settings.h.example  wifi_settings.h1  wifi_sta.c
main/tests/: e2e_self_tests.c  self_tests.c  self_tests_app_main.c
main/web/: api_contracts.c  api_contracts.h  api_handlers.c  api_handlers.h  api_usecases.c  api_usecases.h  http_error.c  http_error.h  http_routes.c  http_static.c  web_server.c  ws_manager.c
main/web/www/: e2e_contract.html  e2e_contract.js  e2e_headless_runner.mjs  index.html  script.js  style.css
main/www/: index.html  script.js  style.css
tests/: README.md  (+1 more)
(+61 files in other folders)
