idf_component_register(
    SRCS
        "src/gateway_app_bootstrap.c"
        "src/gateway_zigbee_runtime.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp-zigbee-lib
        nvs_flash
        esp_http_server
        spiffs
        gateway_core
        gateway_core_facade
        gateway_core_events
        gateway_core_state
        gateway_core_system
        gateway_core_zigbee
        gateway_net
        gateway_web_api
        gateway_web
    PRIV_REQUIRES
        esp_wifi
        esp_timer
        esp_coex
        vfs
        esp_driver_usb_serial_jtag
)
