idf_component_register(
    SRCS
        "src/gateway_device_zigbee_facade.c"
        "src/gateway_wifi_system_facade.c"
        "src/gateway_jobs_facade.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        gateway_core
        gateway_core_state
        gateway_core_jobs
        gateway_core_system
        gateway_core_wifi
        gateway_core_zigbee
)
