idf_component_register(
    SRCS
        "src/job_queue.c"
        "src/job_queue_worker.c"
        "src/job_queue_submit.c"
        "src/job_queue_state.c"
        "src/job_queue_policy.c"
        "src/job_queue_json.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        gateway_core
        gateway_core_events
        gateway_core_zigbee
        gateway_core_wifi
        gateway_core_system
        esp_event
        esp_timer
        json
)
