idf_component_register(
    SRCS
        "src/device_repository_nvs.c"
        "src/gateway_state.c"
        "src/storage_kv_nvs.c"
        "src/settings_manager.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        gateway_core_events
        gateway_shared_config
    PRIV_REQUIRES
        nvs_flash
        esp_event
        esp_timer
        esp_partition
)
