idf_component_register(
    SRCS
        "src/wifi_init.c"
        "src/wifi_sta.c"
        "src/wifi_ap_fallback.c"
        "gateway_net_placeholder.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        gateway_core
        esp_wifi
        esp_netif
        esp_event
        esp_timer
        nvs_flash
)
