idf_component_register(
    SRCS
        "src/wifi_init.c"
        "src/wifi_sta.c"
        "src/wifi_ap_fallback.c"
        "src/net_platform_services.c"
        "gateway_net_placeholder.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        gateway_core
        gateway_core_state
        gateway_core_wifi
        gateway_core_system
        esp_wifi
        esp_netif
        esp_event
        esp_timer
        esp_system
        esp_driver_tsens
        nvs_flash
)
