idf_component_register(
    SRCS
        "src/api_contracts.c"
        "src/api_handlers.c"
        "src/api_status_handlers.c"
        "src/api_health_handlers.c"
        "src/api_jobs_handlers.c"
        "src/api_usecases.c"
        "src/http_error.c"
        "src/error_ring.c"
        "src/lqi_json_mapper.c"
    INCLUDE_DIRS
        "../gateway_web/include"
    REQUIRES
        gateway_core
        gateway_core_zigbee
        gateway_core_wifi
        gateway_core_system
        gateway_core_jobs
        esp_http_server
        json
        nvs_flash
        esp_timer
)
