idf_component_register(
    SRCS
        "src/api_contracts.c"
        "src/api_handlers.c"
        "src/api_status_handlers.c"
        "src/api_health_handlers.c"
        "src/status_json_builder.c"
        "src/health_json_builder.c"
        "src/api_jobs_handlers.c"
        "src/api_usecases.c"
        "src/api_usecases_zigbee.c"
        "src/api_usecases_system.c"
        "src/http_error.c"
        "src/error_ring.c"
        "src/lqi_json_mapper.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        gateway_core_facade
        esp_http_server
        json
)
