idf_component_register(
    SRCS
        "src/ws_manager.c"
        "src/ws_manager_state.c"
        "src/ws_manager_transport.c"
        "src/ws_manager_json.c"
        "src/ws_manager_policy.c"
    INCLUDE_DIRS
        "include"
    REQUIRES
        gateway_web_api
        gateway_core_events
        esp_http_server
        esp_event
        esp_timer
)
